# factory-game

./: Cargo.toml  text.fs  text.vs  ui.fs  vertex.vs
assets/models/: assembler.gox  assembler.vmf  belt.gox  belt.txt  belt.vmf  block_outline.gox  block_outline.txt  block_outline.vmf  chest.gox  chest.txt  chest.vmf  furnace.gox  furnace.vmf  furnace.vox  inserter.gox  inserter.txt  inserter.vmf  quarry.gox  quarry.vmf  radar.vmf  silo.gox  silo.vmf  splitter.gox  splitter.txt  splitter.vmf  steel_furnace.vmf
design/: backlog.md  changelog.md  perf.md  todo.md
scripts/: generate_recipes.py
shaders/: mesh.fs  mesh.vs  mesh.wgsl  text.fs  text.wgsl  ui.vs  ui.wgsl  voxel.fs  voxel.vs  voxel.wgsl
src/: belt_network.rs  buddy_allocator.rs  chunk.rs  commands.rs  constants.rs  crafting.rs  directions.rs  entities.rs  free_list.rs  frustum.rs  game.rs  gen_map.rs  input.rs  items.rs  main.rs  mesh.rs  octree.rs  perlin.rs  quad.rs  renderer.rs  save_system.rs  shader.rs  structure.rs  structures.rs  ui.rs  voxel_world.rs
src/crafting/: data.rs
src/game/: save_system.rs
src/renderer/: gpu_allocator.rs  ssbo.rs  textures.rs  uniform.rs  utils.rs
src/structures/: belts.rs  inventory.rs  strct.rs  work_queue.rs
src/voxel_world/: chunk.rs  chunker.rs  mesh.rs  voxel.rs
