[package]
name = "prototype_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "*", features = ["rand", "serde"] }
gl = "*"
glfw = "*"
#sti = { path = "./vendor/sti" }
sti = { git = "https://github.com/leddoo/sti" }
save-format = { git = "https://github.com/rookieCookies/save-format" }
freetype = "*"
rand = "*"
obj-rs = "*"

image = "*"
