[package]
name = "prototype_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "*", features = ["rand", "serde"] }
gl = "*"
glfw = "*"
sti = { git = "https://github.com/leddoo/sti" }
save-format = { git = "https://github.com/rookieCookies/save-format" }
freetype = "*"
rand = "*"
obj-rs = "*"

image = "*"

#dhat = "*"
libnoise = "1.2.0"
rayon = "*"

[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
