[package]
name = "prototype_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "*", features = ["rand", "bytemuck"] }
wgpu = "*"
wgpu-profiler = "*"
winit = "*"
bytemuck = "*"
pollster = "*"
metal = "*"

glfw = "*"
gl = "*"

sti = { git = "https://github.com/leddoo/sti" }
save-format = { git = "https://github.com/rookieCookies/save-format" }
voxel-mesher = { git = "https://github.com/rookieCookies/voxel-mesher" }
freetype = "*"
rand = "*"

image = "*"

libnoise = { version = "1.2.0", features = ["image"] }
rayon = "*"

tracing = "*"
tracing-subscriber = "*"

[profile.release]
debug = 1
debug-assertions = true

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

